# openhexa-app

./: .dockerignore  .env.dist  .env.local.dist  .env.template  .eslintrc.json  .flake8  .gitignore  .npm-upgrade.json  .pre-commit-config.yaml  .prettierignore  .release-please-manifest.json  404.html  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.dataworker  Dockerfile.db  LICENSE  LICENSE.md  LOCAL_SETUP.md  Makefile  PR_DESCRIPTION.md  README.md  TODO.md  ai_assistant_implementation_plan.md  backup.sh  codegen.yml  config.dist.yaml  config.yaml  dependabot.yml  docker-compose.debug.yaml  docker-compose.nohub.yml  docker-compose.oidc.yaml  docker-compose.override.yaml  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  example_query.md  graphql.config.yml  i18next-parser.config.js  (+32 more)
backend/: .bash_history  .coveragerc  .dockerignore  .gitignore  .release-please-manifest.json  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  release-please-config.json  requirements.in  requirements.txt
backend/.devcontainer/: devcontainer.json
backend/.devcontainer/library-scripts/: python-debian.sh
backend/.devcontainer/scripts/: postCreateCommand.sh
backend/.github/: pull_request_template.md
backend/.github/workflows/: build_docker_image.yml  lint.yml
backend/config/: asgi.py  logging.py  schema.py  sentry.py  test_sentry.py  urls.py  workers.py  wsgi.py
backend/config/settings/: base.py  dev.py  local.py  production.py  test.py
backend/hexa/: app.py
backend/hexa/analytics/: api.py  middlewares.py
(+4736 files in other folders)
