[project]
name = "openhexa-app"
version = "5.10.1"
authors = [
    {name = "BLSQ", email = "tech@bluesquarehub.com"},
]

[tool.ruff]
exclude =[".git",".eggs","node_modules", ".local", ".vscode", ".cache"] # exclude a few common directories in the root of the project

[tool.ruff.lint]
extend-select = [
    "D",   # pydocstyle
    "I",   # isort
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
]
ignore = [
    "E501",
    # Disable all "missing docstrings" and "missing type annotations" rules for now
    # TODO: Enable progressively the following rules
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN102",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN205",
    "ANN206",
    "ANN401",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D200",
    "D205",
    "D400",
    "D401",
    "D404"
]

[tool.ruff.lint.pydocstyle]
convention = "numpy" # Accepts: "google", "numpy", or "pep257".

